--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/main/webapp/AdminPage.jsp=UTF-8
+encoding//src/main/webapp/addProduct.jsp=UTF-8
 encoding/<project>=UTF-8
